--- a/pages/grupos.html
+++ b/pages/grupos.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../assets/imagenes/logo/logoTrasnparenteFavicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../css/grupos.css" />
     <title>Copa América 2024 - Grupos</title>
